@@ -62,6 +62,5 @@ gtkdoc-mkdb
 gtkdoc-mktmpl
 gtkdoc-scan
 gtkdoc-scanobj
-gtk-doc.spec
 ],
 [chmod +x gtkdoc-mkman gtkdoc-mkhtml gtkdoc-fixxref gtkdoc-mkdb gtkdoc-mktmpl gtkdoc-scan gtkdoc-scanobj])
